==> CasuistGUIJI/stm32project/HARDWARE/oled.c <==
#include "oled.h"
#include "oledfont.h"
#include "delay.h"
#include "bmp.h"
#include "usart.h"

void IIC_Start()
{

	//将SDA配置为输出模式
	SDA_OLED_Mode(GPIO_Mode_OUT);
	
	IIC_SCL = 1;
	IIC_SDA_O = 1;
	delay_us(5);
	
	IIC_SDA_O = 0;
	delay_us(5);
}

void IIC_Stop()
{
	//将SDA配置为输出模式
	SDA_OLED_Mode(GPIO_Mode_OUT);
	
	IIC_SCL = 1;
	IIC_SDA_O = 0;
	delay_us(5);
	
	IIC_SDA_O = 1;
	delay_us(5);
	
}

void Write_IIC_Byte(unsigned char IIC_Byte)
{
		//将SDA配置为输出模式
	SDA_OLED_Mode(GPIO_Mode_OUT);
	
	IIC_SCL = 0;
	IIC_SDA_O = 0;
	delay_us(5);
	
	for(u8 i=0; i<8; i++)
	{
		if(IIC_Byte & (1<<(7-i)))
			IIC_SDA_O = 1;
		else
			IIC_SDA_O = 0;
		delay_us(5);
		
		IIC_SCL = 1;
		delay_us(5);
		
		IIC_SCL = 0;
		delay_us(5);
	}
}

void OLED_WR_Byte(unsigned dat,unsigned cmd)
{
	if(cmd)
		Write_IIC_Data(dat);
	else 
		Write_IIC_Command(dat);
}
