==> WHU-EIS-Robotics/MSPM0-DevKit/GPIO/BSP/src/oled.c <==
#include "oled.h"
#include "ti_msp_dl_config.h"
#include "math.h"

void OLED_WR_Byte(uint8_t data,uint8_t cmd)
{
	//DL_I2C_enableStartCondition(I2C0);
	if(cmd)
	{
		DL_I2C_transmitControllerData(I2C0,0X40);
		DL_I2C_transmitControllerData(I2C0,data);
	}
	else
	{
		DL_I2C_transmitControllerData(I2C0,0X00);
		DL_I2C_transmitControllerData(I2C0,data);
	}
	DL_I2C_startControllerTransfer(I2C0,OLED_ADDRESS,DL_I2C_CONTROLLER_DIRECTION_TX,2);
  	while (DL_I2C_getControllerStatus(I2C_0_INST) &DL_I2C_CONTROLLER_STATUS_BUSY_BUS);      //等待发送完成
	while (!(DL_I2C_getControllerStatus(I2C_0_INST) &DL_I2C_CONTROLLER_STATUS_IDLE));		//等待I2C空闲
	delay_cycles(30);
//	DL_I2C_disableStopCondition(I2C0);
}

void IIC_Start()
{

	OLED_SCLK_Set() ;
	delay_cycles(2);
	OLED_SDIN_Set();
	delay_cycles(2);
	OLED_SDIN_Clr();
	delay_cycles(2);
	OLED_SCLK_Clr();
	delay_cycles(2);
}

void IIC_Stop()
{

	OLED_SCLK_Clr();
	delay_cycles(2);
	OLED_SDIN_Clr();
	delay_cycles(2);
	OLED_SDIN_Set();
	delay_cycles(2);
	OLED_SCLK_Set();
	delay_cycles(2);
}

void Write_IIC_Byte(unsigned char IIC_Byte)
{
	unsigned char i;
	unsigned char m,da;
	da=IIC_Byte;
	for(i=0;i<8;i++)		
	{
		m=da;
		OLED_SCLK_Clr();
		delay_cycles(2);
		m=m&0x80;
		if(m==0x80)
		{OLED_SDIN_Set();}
		else OLED_SDIN_Clr();
		delay_cycles(2);
		da=da<<1;
		OLED_SCLK_Set();
		delay_cycles(2);
	}
	OLED_SCLK_Clr();
	delay_cycles(2);
	OLED_SCLK_Set() ;
	delay_cycles(2);
}

void OLED_WR_Byte(uint8_t data,uint8_t cmd)
{
	if(cmd)
	{
		IIC_Start();
		Write_IIC_Byte(0x78);			//D/C#=0; R/W#=0
		Write_IIC_Byte(0x40);			//write data
		Write_IIC_Byte(data);
		IIC_Stop();
	}
	else 
	{
		IIC_Start();
		Write_IIC_Byte(0x78);            //Slave address,SA0=0
		Write_IIC_Byte(0x00);			//write command
		Write_IIC_Byte(data); 
		IIC_Stop();
	}
}
